--- a/css/style.css
+++ b/css/style.css
@@ -92,13 +92,13 @@ header a:hover {
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  background: #212121;
+  background: #000;
   border: 1px dashed #dfdfdf;
   border-radius: 10px;
 }
 
 .about .container {
-  background: #212121;
+  background: #1a1515;
   border: 1px dashed #dfdfdf;
   border-radius: 10px;
   padding: 1rem;
@@ -145,7 +145,7 @@ header a:hover {
 }
 
 .projects {
-  background: #101010;
+  background: #0e0d0d;
   padding: 4rem 1rem;
   display: flex;
   justify-content: flex-end;
@@ -154,7 +154,7 @@ header a:hover {
 
 .projects .back {
   /* transform: rotate3d(-1, -1, 0, 20deg); */
-  background: #101010;
+  background: #0e0d0d;
 }
 
 .projects .text {
@@ -181,7 +181,7 @@ header a:hover {
   justify-content: center;
   width: 100%;
   flex-grow: 1;
-  background: #202020;
+  background: #0e0e0e;
   border: 1px solid #dfdfdf;
   padding: 1rem;
   margin: 0.5rem;
@@ -237,7 +237,7 @@ header a:hover {
 .socials {
   display: flex;
   justify-content: center;
-  background: #212121;
+  background: #000;
 }
 
 .socials a {
