--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ body {
   width: 100%;
   height: 100vh;
   background: url("../img/background.jpg");
+  background-position: center;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -145,7 +146,7 @@ header a:hover {
 }
 
 .projects {
-  background: #0e0d0d;
+  background: #161616;
   padding: 4rem 1rem;
   display: flex;
   justify-content: flex-end;
@@ -154,7 +155,7 @@ header a:hover {
 
 .projects .back {
   /* transform: rotate3d(-1, -1, 0, 20deg); */
-  background: #0e0d0d;
+  background: #161616;
 }
 
 .projects .text {
@@ -189,7 +190,7 @@ header a:hover {
 
 .project:hover {
   cursor: pointer;
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.2);
 }
 
 .project h2 {
