--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
 
+@import "./socials.css";
+@import "./media.css";
+@import "./nav.css";
+
 * {
   margin: 0;
   padding: 0;
@@ -10,24 +14,12 @@
   color: #dfdfdf;
 }
 
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-::-webkit-scrollbar-track {
-  background: #101010;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #404040;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
-}
 
 body {
   background: #101010;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .showcase {
@@ -53,27 +45,6 @@ body {
   margin-right: 1rem;
 }
 
-header nav {
-  position: absolute;
-  background: rgba(0, 0, 0, 0.7);
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  padding-right: 0.5rem;
-}
-
-header a {
-  display: block;
-  padding: 1rem 0.5rem;
-  margin: 0 0.5rem;
-  font-size: 1.2rem;
-}
-
-header a:hover {
-  cursor: pointer;
-  background: rgba(225, 225, 255, 0.4);
-}
-
 .back {
   padding: 2rem;
   background: #000;
@@ -82,80 +53,59 @@ header a:hover {
 }
 
 .about {
-  background: #000;
   padding: 4rem 1rem;
+}
+
+.about-background {
+  width: 100%;
+  height: 100vh;
+  opacity: 0.5;
+  background-image: url('../img/mongo.png');
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.5s ease-in;
+}
+
+.about-left {
+  border-bottom: 1px dashed #6e6e6e;
+  padding: 1rem;
+  width: 80%;
+  z-index: 5;
+  margin-top: 1rem;
   overflow: hidden;
 }
 
-
-.projects .container {
-  width: 100%;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  background: #000;
-  border: 1px dashed #dfdfdf;
-  border-radius: 10px;
+.about-left {
+  background: rgba(0,0,0,0.3);
 }
 
-.about .container {
-  background: #1a1515;
-  border: 1px dashed #dfdfdf;
-  border-radius: 10px;
-  padding: 1rem;
-}
-
-.about p {
+.about-desc {
   margin: auto;
-  padding: 1rem 1rem 0 1rem;
   font-size: 1.3rem;
   letter-spacing: 1.5px;
   text-align: justify;
-  transform: translateX(-200%);
-}
-
-.line {
-  margin: 2rem 1rem;
-  border: 1px dashed #7e7e7e;
-}
-
-.stack-logos {
-  width: 100%;
-  margin: 1rem auto !important;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  transform: translateY(-500%);
-}
-
-.stack-item {
-  width: 50%;
-  padding: 1rem 0;
-  display: flex;
-  margin: auto;
-  align-items: center;
-}
-
-.stack-item h2 {
-  margin-left: 2rem;
-}
-
-.stack-item img {
-  width: 5rem;
-  margin-left: 25%;
+  transform: translateY(200%);
+  transition: all .6s ease-in-out;
 }
 
 .projects {
   background: #161616;
-  padding: 4rem 1rem;
+  padding: 4rem 1rem 0 1rem;
   display: flex;
   justify-content: flex-end;
   overflow: hidden;
+  height: 100vh;
 }
 
-.projects .back {
-  /* transform: rotate3d(-1, -1, 0, 20deg); */
-  background: #161616;
+.projects-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .projects .text {
@@ -163,17 +113,20 @@ header a:hover {
   font-size: 1.2rem;
   text-align: justify;
   letter-spacing: 1.2px;
-  transform: translateX(200%);
-}
-
-.fly {
-  transform: translateY(200%);
 }
 
 .projects .fly {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+  height: 90rem;
+  overflow-y: auto;
+  overflow-x: hidden;
+  width: 90%;
+  margin: 1rem auto 0 auto;
+  z-index: 10;
+  transform: translateY(200%);
+  transition: all 1s ease-in-out;
 }
 
 .project {
@@ -181,11 +134,10 @@ header a:hover {
   align-items: center;
   justify-content: center;
   width: 100%;
-  flex-grow: 1;
   background: #0e0e0e;
   border: 1px solid #dfdfdf;
   padding: 1rem;
-  margin: 0.5rem;
+  margin: 0.5rem 0;
 }
 
 .project:hover {
@@ -235,26 +187,6 @@ header a:hover {
   align-items: center;
 }
 
-.socials {
-  display: flex;
-  justify-content: center;
-  background: #000;
-}
-
-.socials a {
-  margin: 1rem;
-  padding: 1rem;
-  text-align: center;
-  border-radius: 5px;
-}
-
-.socials a i {
-  font-size: 72px;
-}
-
-.socials a:hover {
-  background: rgba(225, 225, 255, 0.4);
-}
 
 @keyframes blink {
   50% {
@@ -292,122 +224,18 @@ header a:hover {
   }
 }
 
-@media only screen and (max-width: 1100px) {
-  .back {
-    width: 80%;
-  }
+.fly::-webkit-scrollbar {
+  width: 10px;
 }
 
-@media only screen and (max-width: 980px) {
-  .showcase {
-    flex-direction: column;
-  }
-
-  .showcase h1 {
-    font-size: 4.5rem !important;
-  }
+.fly::-webkit-scrollbar-track {
+  background: #101010;
 }
 
-@media only screen and (max-width: 1006px) {
-  .back {
-    width: 90%;
-  }
+.fly::-webkit-scrollbar-thumb {
+  background: #404040;
 }
 
-@media only screen and (max-width: 900px) {
-  .back {
-    width: 100%;
-    padding: 1rem;
-  }
-}
-
-@media only screen and (max-width: 782px) {
-  .project, .links {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .project h2 {
-    width: auto;
-  }
-
-  .showcase h1 {
-    font-size: 2.8rem !important;
-  }
-
-  .about p {
-    font-size: 1.6rem;
-  }
-
-  .stack-item img {
-    margin-left: 15% !important;
-  }
-
-  .stack-item h2 {
-    margin-left: 1rem;
-  }
-}
-
-@media only screen and (max-width: 676px) {
-  .container {
-    grid-template-columns: 1fr !important;
-  }
-}
-
-@media only screen and (max-width: 619px) {
-  .showcase h1 {
-    font-size: 2.6rem !important;
-  }
-
-  .about p {
-    font-size: 1.2rem;
-  }
-
-  .stack-item {
-    width: 100%;
-    justify-content: center;
-  }
-
-  .stack-item img {
-    width: 7rem;
-    margin-left: 0 !important;
-  }
-
-  .stack-item h2 {
-    margin-left: 1rem;
-    font-size: 2rem;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .showcase h1 {
-    font-size: 2.3rem !important;
-  }
-}
-
-@media only screen and (max-width: 450px) {
-  .showcase h1 {
-    font-size: 2rem !important;
-  }
-
-  .showcase img {
-    width: 5rem;
-  }
-
-  .stack-logos {
-    margin-left: -3rem;
-  }
-
-  .stack-item img {
-    width: 5rem;
-    margin-left: 0 !important;
-  }
-
-  .stack-item h2 {
-    font-size: 1.5rem;
-  }
-
-  header nav {
-    justify-content: center;
-  }
+.fly::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
